--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,7 @@
 tasks:
   - init: |
       docker run -d -p 8888:8888 -v /workspace:/config/workspace astrabert/bigdata-rstudio-rocker:latest
+  - command: sleep 5000
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
