trying to use a pre-built container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,8 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.238.0/containers/jupyter-datascience-notebooks
 {
-	"build": {
-		"dockerfile": "Dockerfile",
-		"args": { "COPY_CONTEXT": "." }
-	},
-	"overrideCommand": false,
-	
+	"name": "bigdata-rstudio-jupyter",
+	"image": "ghcr.io/lescai-teaching/bigdata-rstudio-gitpod:latest",
 	// Forward Jupyter port locally, mark required
 	"forwardPorts": [8888],
 	"portsAttributes": {
