--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,5 +25,6 @@
 				"ms-python.python"
 			]
 		}
-	}
+	},
+	"postStartCommand": "R_PATH=\"PATH=$PATH\" && echo $R_PATH >> ~/.Renviron && echo $R_PATH >> /home/rstudio/.Renviron"
 }
