--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,5 +26,5 @@
 			]
 		}
 	},
-	"postStartCommand": "R_PATH=\"PATH=$PATH\" && echo $R_PATH >> ~/.Renviron && echo $R_PATH >> /home/rstudio/.Renviron"
+	"postStartCommand": "R_PATH=\"PATH=$PATH\" && echo $R_PATH >> /home/rstudio/.Renviron && for var in CODESPACE_NAME CODESPACES GITHUB_TOKEN GITHUB_USER GITHUB_SERVER_URL; do [ -n \"${!var}\" ] && echo \"$var=${!var}\" >> /home/rstudio/.Renviron; done"
 }
